--- a/app/src/main/res/layout/activity_intro_first.xml
+++ b/app/src/main/res/layout/activity_intro_first.xml
@@ -40,10 +40,10 @@
         android:id="@+id/intro_first_attention2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/intro_first_attention1"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/pd_light"
         android:gravity="top"
         android:text="인공지능 스타일리스트"
@@ -54,10 +54,11 @@
         android:id="@+id/intro_first_attention3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/intro_first_attention2"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="164dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/montserrat_regular"
         android:gravity="top"
         android:lineSpacingExtra="-7sp"
@@ -69,10 +70,11 @@
         android:id="@+id/intro_first_attention4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/intro_first_attention2"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
         android:layout_marginStart="137dp"
-        android:layout_marginTop="173dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/pd_light"
         android:gravity="top"
         android:text="입니다."
@@ -83,25 +85,54 @@
         android:id="@+id/intro_first_gif"
         android:layout_width="240dp"
         android:layout_height="240dp"
+        android:layout_below="@id/intro_first_attention4"
+        android:layout_alignParentTop="false"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="256dp"
-        android:background="@drawable/intro_image"
-        />
+        android:layout_marginTop="70dp"
+        android:background="@drawable/intro_image" />
 
-    <TextView
+
+    <RelativeLayout
         android:id="@+id/intro_first_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="250dp"
-        android:fontFamily="@font/pd_light"
-        android:gravity="top"
-        android:lineSpacingExtra="-3sp"
-        android:text="다음"
-        android:textColor="#2E2E2E"
-        android:textSize="18sp" />
+        android:layout_marginEnd="15dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_marginBottom="65dp"
+        android:padding="20dp"
+        android:focusable="true">
+
+
+        <TextView
+            android:id="@+id/intro_first_next_TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/pd_light"
+            android:text="다음"
+            android:textColor="#2E2E2E"
+            android:textSize="18sp" />
+
+        <ImageView
+            android:id="@+id/intro_first_next_image"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/intro_first_next_TextView"
+            android:padding="2dp"
+            app:srcCompat="@drawable/next" />
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/intro_first_next_page1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/intro_first_gif"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        app:srcCompat="@drawable/page1" />
 
 </RelativeLayout>
