--- a/app/src/main/res/layout/activity_intro_first.xml
+++ b/app/src/main/res/layout/activity_intro_first.xml
@@ -84,9 +84,7 @@
         android:id="@+id/intro_first_gif"
         android:layout_width="240dp"
         android:layout_height="240dp"
-        android:layout_below="@id/intro_first_attention4"
-        android:layout_alignParentTop="false"
-        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:layout_marginTop="70dp"
         android:background="@drawable/intro_image" />
 
