--- a/app/src/main/res/layout/activity_preset.xml
+++ b/app/src/main/res/layout/activity_preset.xml
@@ -221,8 +221,9 @@
 
     <TextView
         android:id="@+id/next"
-        android:layout_width="match_parent"
+        android:layout_width="152dp"
         android:layout_height="30dp"
+        android:layout_gravity="center_horizontal"
         android:layout_margin="5dp"
         android:clickable="true"
         android:fontFamily="@font/pd_light"
