--- a/app/src/main/res/layout/activity_intro_second2.xml
+++ b/app/src/main/res/layout/activity_intro_second2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".introFirst_Activity">
+    tools:context=".Intro.introFirst_Activity">
 
     <TextView
         android:id="@+id/intro_sec_skip_textView"
