--- a/app/src/main/res/layout/activity_intro_second2.xml
+++ b/app/src/main/res/layout/activity_intro_second2.xml
@@ -60,5 +60,78 @@
         android:layout_marginTop="100dp"
         app:srcCompat="@drawable/page2" />
 
+    <RelativeLayout
+        android:id="@+id/intro_sec_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="15dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_marginBottom="65dp"
+        android:padding="20dp"
+        android:focusable="true">
+
+
+        <TextView
+            android:id="@+id/intro_sec_next_TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/pd_light"
+            android:text="다음"
+            android:textColor="#2E2E2E"
+            android:textSize="18sp" />
+
+        <ImageView
+            android:id="@+id/intro_sec_next_image"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/intro_sec_next_TextView"
+            android:padding="2dp"
+            app:srcCompat="@drawable/next" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/intro_sec_prev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="15dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_marginBottom="65dp"
+        android:padding="20dp"
+        android:focusable="true">
+
+        <TextView
+            android:id="@+id/intro_sec_prev_TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/pd_light"
+            android:text="이전"
+            android:textColor="#2E2E2E"
+            android:textSize="18sp"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/intro_sec_prev_image"
+            />
+
+        <ImageView
+            android:id="@+id/intro_sec_prev_image"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:padding="2dp"
+            app:srcCompat="@drawable/prev" />
+
+
+
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
