마이페이지 수정

--- a/app/src/main/res/layout/activity_preset_gender.xml
+++ b/app/src/main/res/layout/activity_preset_gender.xml
@@ -73,7 +73,8 @@
             android:text="남성"
             android:textColor="#2E2E2E"
             app:strokeColor="#2E2E2E"
-            app:strokeWidth="1dp" />
+            app:strokeWidth="1dp"
+            />
 
         <Button
             android:id="@+id/woman"
