--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -10,14 +10,6 @@
         android:layout_height="50dp"
         android:layout_marginTop="30dp">
 
-        <ImageView
-            android:id="@+id/button_back"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            app:tint="#0E0E0E"
-            app:srcCompat="@drawable/back" />
 
         <TextView
             android:id="@+id/title_profile"
@@ -85,7 +77,11 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#E6DFDF"
+        />
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
         android:layout_height="50dp">
@@ -105,6 +101,7 @@
     </com.google.android.material.tabs.TabLayout>
 
     <GridView
+        android:id="@+id/grid_mypage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="3" />
