--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -63,7 +63,7 @@
         android:src="@drawable/hanger_img_background"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="39dp"
-        android:layout_marginLeft="98dp">
+        android:layout_centerHorizontal="true">
 
     </ImageView>
 
