--- a/app/src/main/res/layout/activity_intro_first.xml
+++ b/app/src/main/res/layout/activity_intro_first.xml
@@ -8,6 +8,7 @@
     tools:context=".Intro.IntroFirst_Activity">
 
     <TextView
+        android:foreground="?android:attr/selectableItemBackground"
         android:id="@+id/intro_first_skip_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -100,7 +101,8 @@
         android:foreground="?android:attr/selectableItemBackground"
         android:layout_marginBottom="65dp"
         android:padding="20dp"
-        android:focusable="true">
+        android:focusable="true"
+        >
 
 
         <TextView
