--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -64,7 +64,8 @@
                     android:layout_width="100dp"
                     android:layout_height="35dp"
                     android:layout_marginTop="10dp"
-                    android:contextClickable="true" >
+                    android:contextClickable="true"
+                    android:foreground="?android:attr/selectableItemBackground">
 
                     <TextView
                         android:id="@+id/button_profileModify"
