--- a/app/src/main/res/layout/activity_preset.xml
+++ b/app/src/main/res/layout/activity_preset.xml
@@ -78,6 +78,7 @@
                     android:orientation="horizontal">
 
                     <EditText
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:id="@+id/ki_input"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -130,6 +131,7 @@
                     android:orientation="horizontal">
 
                     <EditText
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:id="@+id/muge_input"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -182,6 +184,7 @@
                     android:orientation="horizontal">
 
                     <EditText
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:id="@+id/nai_input"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -225,6 +228,7 @@
         android:layout_height="30dp"
         android:layout_gravity="center_horizontal"
         android:layout_margin="5dp"
+        android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:fontFamily="@font/pd_light"
         android:gravity="center_horizontal"
