--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center">
+
+
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,7 +20,8 @@
         </androidx.fragment.app.FragmentContainerView>
 
     </FrameLayout>
-<RelativeLayout
+
+    <RelativeLayout
     android:layout_alignParentBottom="true"
     android:layout_width="match_parent"
     android:layout_height="150dp">
@@ -25,58 +29,87 @@
         android:layout_width="match_parent"
         android:layout_height="110dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="1dp"
+        android:layout_marginBottom="-15dp"
         android:src="@drawable/bottom_bar_img_2">
 
     </ImageView>
 
     <ImageView
-        android:id="@+id/home_btn"
         android:layout_width="100dp"
         android:layout_height="20dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="53.5dp"
-        android:layout_marginBottom="46.5dp"
-        android:background="#FFFFFF"
-        android:clickable="true"
+        android:layout_marginBottom="35.5dp"
         android:src="@drawable/home_btn">
 
     </ImageView>
 
     <ImageView
-        android:id="@+id/my_page_btn"
         android:layout_width="100dp"
         android:layout_height="20dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginRight="53dp"
-        android:layout_marginBottom="47dp"
-        android:background="#FFFFFF"
-        android:clickable="true"
+        android:layout_marginBottom="35.5dp"
         app:srcCompat="@drawable/img_mypage" />
 
     <ImageView
-        android:alpha="0.9"
+        android:alpha="0.8"
         android:layout_width="wrap_content"
         android:layout_height="120dp"
         android:src="@drawable/hanger_img_background"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="39dp"
+        android:layout_marginBottom="21dp"
         android:layout_centerHorizontal="true">
 
     </ImageView>
 
     <ImageView
         android:id="@+id/chat_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_width="37dp"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="75dp"
+        android:layout_marginBottom="55dp"
         android:clickable="true"
         android:src="@drawable/hanger_img" />
 
 
         </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
+
+        <LinearLayout
+            android:id="@+id/home_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:clickable="true"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:layout_weight="0.35">
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/my_page_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:clickable="true"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+        </LinearLayout>
+
+    </LinearLayout>
 </RelativeLayout>
