--- a/app/src/main/res/layout/activity_intro_second2.xml
+++ b/app/src/main/res/layout/activity_intro_second2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Intro.IntroFirst_Activity">
+    tools:context=".genfit.Intro.IntroFirst_Activity">
 
     <TextView
         android:foreground="?android:attr/selectableItemBackground"
