--- a/app/src/main/res/layout/activity_preset_gender.xml
+++ b/app/src/main/res/layout/activity_preset_gender.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Preset.PresetGenderActivity">
+    tools:context=".genfit.Preset.PresetGenderActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="71dp"
