--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -36,13 +36,14 @@
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rc"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="wrap_content"
         app:cardUseCompatPadding="false">
 
         <LinearLayout
@@ -74,21 +75,25 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:id="@+id/imageView2"
+                            android:id="@+id/tag"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_gravity="center_vertical"
                             android:layout_marginStart="5dp"
                             android:padding="12dp"
+                            android:clickable="true"
+                            android:foreground="?android:attr/selectableItemBackground"
                             app:srcCompat="@drawable/tag" />
 
                         <EditText
-                            android:id="@+id/editTextText"
+                            android:id="@+id/edit"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
                             android:background="@null"
+                            android:fontFamily="@font/pd_medium"
+                            android:hint="채팅을 입력하세요."
                             android:inputType="textMultiLine"
                             android:maxLines="4"
                             android:minHeight="40dp"
@@ -96,11 +101,13 @@
                             android:paddingBottom="5dp" />
 
                         <ImageView
-                            android:id="@+id/imageView3"
+                            android:id="@+id/send"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_gravity="center_vertical"
                             android:layout_marginEnd="5dp"
+                            android:clickable="true"
+                            android:foreground="?android:attr/selectableItemBackground"
                             android:padding="12dp"
                             app:srcCompat="@drawable/send" />
 
@@ -110,10 +117,11 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="300dp"
                 android:orientation="vertical"
                 android:paddingStart="30dp"
-                android:paddingEnd="30dp">
+                android:paddingEnd="30dp"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/textView5"
