--- a/app/src/main/res/layout/chat_list_item.xml
+++ b/app/src/main/res/layout/chat_list_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/opponent_profile"
@@ -43,6 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_name"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="20dp"
             android:layout_toEndOf="@id/opponent_profile"
             android:minWidth="200dp"
             android:visibility="visible"
@@ -77,10 +78,54 @@
                     android:layout_height="50dp"
                     android:layout_below="@id/tv_opponent"
                     android:layout_centerInParent="true"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     app:lottie_autoPlay="false"
                     app:lottie_fileName="loading.json"
                     app:lottie_loop="true"></com.airbnb.lottie.LottieAnimationView>
+
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/change_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_opponent"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:visibility="gone"
+                    app:cardBackgroundColor="#FFFFFF"
+                    app:strokeColor="#6E6E6E"
+                    app:strokeWidth="0.4dp">
+
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/imageView"
+                            android:layout_width="30dp"
+                            android:layout_height="50dp"
+                            android:layout_marginStart="10dp"
+                            app:srcCompat="@drawable/magic"
+                            app:tint="#FFB300" />
+
+                        <TextView
+                            android:id="@+id/textView3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginEnd="10dp"
+                            android:layout_toEndOf="@id/imageView"
+                            android:fontFamily="@font/pd_medium"
+                            android:text="착용 이미지 보기"
+                            android:textColor="@color/main" />
+                    </RelativeLayout>
+
+                </com.google.android.material.card.MaterialCardView>
 
                 <TextView
                     android:id="@+id/tv_load"
@@ -95,21 +140,33 @@
                     android:textSize="12sp"
                     android:visibility="gone" />
 
-                <ImageView
-                    android:id="@+id/iv_opponent"
-                    android:layout_width="wrap_content"
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cdiv"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_opponent"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="15dp"
-                    android:layout_marginBottom="15dp"
-                    android:adjustViewBounds="true"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:maxWidth="200dp"
-                    android:minWidth="100dp"
-                    android:visibility="gone"
-                    app:srcCompat="@drawable/gender" />
+                    android:layout_marginBottom="20dp"
+                    android:visibility="visible"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="0dp">
+
+                    <ImageView
+                        android:id="@+id/iv_opponent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:minWidth="100dp"
+                        android:visibility="visible" />
+
+                </androidx.cardview.widget.CardView>
+
+
             </RelativeLayout>
 
         </com.google.android.material.card.MaterialCardView>
