--- a/app/src/main/res/layout/chat_list_item.xml
+++ b/app/src/main/res/layout/chat_list_item.xml
@@ -54,8 +54,11 @@
             app:strokeWidth="0.4dp">
 
 
-            <RelativeLayout
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
+                android:orientation="vertical"
                 android:layout_height="match_parent">
 
                 <TextView
@@ -72,17 +75,37 @@
                     android:textSize="16dp"
                     android:visibility="visible" />
 
-                <com.airbnb.lottie.LottieAnimationView
-                    android:id="@+id/load_view"
-                    android:layout_width="70dp"
-                    android:layout_height="50dp"
-                    android:layout_below="@id/tv_opponent"
-                    android:layout_centerInParent="true"
-                    android:visibility="gone"
-                    app:lottie_autoPlay="false"
-                    app:lottie_fileName="loading.json"
-                    app:lottie_loop="true"></com.airbnb.lottie.LottieAnimationView>
 
+                <RelativeLayout
+                    android:id="@+id/load"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="visible">
+
+                    <TextView
+                        android:id="@+id/tv_load"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/load_view"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="15dp"
+                        android:fontFamily="@font/pd_light"
+                        android:text="착샷 생성중..."
+                        android:textColor="#1C549C"
+                        android:textSize="12sp"
+                        android:visibility="visible" />
+
+                    <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/load_view"
+                        android:layout_width="70dp"
+                        android:layout_height="50dp"
+                        android:layout_centerInParent="true"
+                        android:layout_gravity="center_horizontal"
+                        android:visibility="visible"
+                        app:lottie_autoPlay="false"
+                        app:lottie_fileName="loading.json"
+                        app:lottie_loop="true"></com.airbnb.lottie.LottieAnimationView>
+                </RelativeLayout>
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/change_image"
@@ -90,11 +113,12 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_opponent"
                     android:layout_centerHorizontal="true"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="20dp"
                     android:clickable="true"
                     android:foreground="?android:attr/selectableItemBackground"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     app:cardBackgroundColor="#FFFFFF"
                     app:strokeColor="#6E6E6E"
                     app:strokeWidth="0.4dp">
@@ -127,19 +151,6 @@
 
                 </com.google.android.material.card.MaterialCardView>
 
-                <TextView
-                    android:id="@+id/tv_load"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/load_view"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="15dp"
-                    android:fontFamily="@font/pd_light"
-                    android:text="착샷 생성중..."
-                    android:textColor="#1C549C"
-                    android:textSize="12sp"
-                    android:visibility="gone" />
-
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cdiv"
@@ -147,9 +158,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_opponent"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="15dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginEnd="20dp"
                     android:visibility="visible"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="0dp">
@@ -166,8 +177,22 @@
 
                 </androidx.cardview.widget.CardView>
 
-
-            </RelativeLayout>
+                <TextView
+                    android:id="@+id/remake"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:clickable="true"
+                    android:fontFamily="@font/pd_regu"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:padding="15dp"
+                    android:text="코디 다시 생성하기"
+                    android:textColor="#1C549C"
+                    android:textSize="13sp"
+                    android:visibility="visible" />
+            </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
     </RelativeLayout>
