--- a/app/src/main/res/layout/activity_preset_gender.xml
+++ b/app/src/main/res/layout/activity_preset_gender.xml
@@ -65,26 +65,27 @@
         <Button
             android:id="@+id/man"
             android:layout_width="240dp"
-            android:layout_height="50dp"
+            android:layout_height="55dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:backgroundTint="#FFFFFF"
             android:fontFamily="@font/pd_regu"
             android:text="남성"
             android:textColor="#2E2E2E"
+            app:cornerRadius="25dp"
             app:strokeColor="#2E2E2E"
-            app:strokeWidth="1dp"
-            />
+            app:strokeWidth="1dp" />
 
         <Button
             android:id="@+id/woman"
             android:layout_width="240dp"
-            android:layout_height="50dp"
+            android:layout_height="55dp"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="#FFFFFF"
             android:fontFamily="@font/pd_regu"
             android:text="여자"
             android:textColor="#2E2E2E"
+            app:cornerRadius="25dp"
             app:strokeColor="#2E2E2E"
             app:strokeWidth="1dp" />
     </LinearLayout>
