--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +7,7 @@
     tools:context=".genfit.Frags.FragHome">
 
     <LinearLayout
+        android:id="@+id/mother"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hapticFeedbackEnabled="true"
@@ -16,75 +17,72 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="126dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:paddingTop="18dp"
-                android:paddingBottom="18dp"
-                android:orientation="vertical">
+                android:paddingBottom="18dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="20dp"
                     android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:layout_width="150dp"
+                    <TextView
+                        android:id="@+id/GenFit_Logo"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/GenFit_Logo"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:fontFamily="@font/montserrat_regular"
-                            android:gravity="center"
-                            android:text="GenFit"
-                            android:textColor="#000000"
-                            android:textSize="24sp" />
-                    </LinearLayout>
+                        android:layout_marginStart="25dp"
+                        android:fontFamily="@font/montserrat_regular"
+                        android:gravity="center"
+                        android:text="GenFit"
+                        android:textColor="#000000"
+                        android:textSize="24sp" />
 
                     <LinearLayout
                         android:layout_width="130dp"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal"/>
+                        android:layout_weight="1"
+                        android:orientation="horizontal" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
                         android:foreground="?android:attr/selectableItemBackground"
-                        >
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/tag"
-                            android:layout_width="36dp"
-                            android:layout_height="27dp"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
                             android:layout_weight="1"
-                            android:src="@drawable/magnifying_glass" />
+                            android:padding="13dp"
+                            android:src="@drawable/search" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal"
+                        android:layout_marginEnd="10dp"
                         android:foreground="?android:attr/selectableItemBackground"
-                        >
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/send"
-                            android:layout_width="match_parent"
-                            android:layout_height="27dp"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
                             android:foreground="?android:attr/selectableItemBackground"
-                            android:src="@drawable/alarm" />
+                            android:padding="15dp"
+                            android:src="@drawable/notifications" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -117,13 +115,13 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:foreground="?android:attr/selectableItemBackground"
                             android:id="@+id/recommed"
                             android:layout_width="52dp"
                             android:layout_height="38dp"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
                             android:fontFamily="@font/pd_bold"
+                            android:foreground="?android:attr/selectableItemBackground"
                             android:gravity="center"
                             android:hapticFeedbackEnabled="false"
                             android:text="추천"
@@ -163,10 +161,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingBottom="10dp">
-
 
 
             <LinearLayout
@@ -176,29 +173,54 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center_vertical">
 
                     <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
-                        android:layout_width="117dp"
-                        android:layout_height="match_parent"
                         android:gravity="center_horizontal|center_vertical">
 
-                        <Spinner
-                            android:id="@+id/spinner"
+                        <RelativeLayout
+                            android:id="@+id/sort_mode"
                             android:layout_width="wrap_content"
-                            android:layout_height="34dp"
-                            android:background="@drawable/round_bg"
-                            android:entries="@array/spinner_items"
-                            android:gravity="center"
-                            android:popupBackground="#FFFFFF"
-                            android:popupElevation="8dp" />
+                            android:layout_height="40dp"
+                            android:layout_marginEnd="15dp"
+                            android:background="?android:attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:visibility="visible">
 
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/spinner_arraow_" />
+                            <ImageView
+                                android:id="@+id/imageView17"
+                                android:layout_width="30dp"
+                                android:layout_height="match_parent"
+                                android:layout_toEndOf="@id/sort_text"
+                                android:padding="5dp"
+                                android:src="@drawable/arrow_drop_down"
+                                app:tint="#464646" />
+
+                            <ImageView
+                                android:id="@+id/sort_img"
+                                android:layout_width="30dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginStart="5dp"
+                                android:padding="5dp"
+                                android:src="@drawable/time"
+                                app:tint="#464646" />
+
+                            <TextView
+                                android:id="@+id/sort_text"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginStart="5dp"
+                                android:layout_toEndOf="@id/sort_img"
+                                android:fontFamily="@font/pd_medium"
+                                android:text="최신 순"
+                                android:textColor="#464646"
+                                android:textSize="15sp" />
+                        </RelativeLayout>
 
 
                     </LinearLayout>
@@ -211,20 +233,43 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <GridView
-
-                android:id="@+id/main_grid"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="60dp"
-                android:gravity="center|center_horizontal|center_vertical"
-                android:numColumns="2"
-                android:horizontalSpacing="-15dp"
-                android:verticalSpacing="20dp">
+                android:layout_height="match_parent">
 
-            </GridView>
+                <androidx.recyclerview.widget.RecyclerView
+
+                    android:id="@+id/main_grid"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/animation_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:layout_alignParentBottom="true"
+                    android:visibility="gone"
+                    app:lottie_fileName="loading.json"
+                    app:lottie_loop="true">
+                </com.airbnb.lottie.LottieAnimationView>
+            </RelativeLayout>
 
         </LinearLayout>
 
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/av"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="false"
+        android:layout_centerInParent="true"
+        android:visibility="visible"
+        app:lottie_fileName="loading.json"
+        app:lottie_loop="true">
+    </com.airbnb.lottie.LottieAnimationView>
+</RelativeLayout>
