--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,95 +7,113 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:orientation="horizontal">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/userprofile"></de.hdodenhof.circleimageview.CircleImageView>
-
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="40dp"
-            android:orientation="vertical">
+            android:layout_height="150dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/user_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="User ID"
-                android:textSize="22dp" />
-
-            <TextView
-                android:id="@+id/user_information"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="000cm · 00kg"
-                android:textSize="16dp" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/userprofile"></de.hdodenhof.circleimageview.CircleImageView>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:layout_marginStart="40dp"
+                android:orientation="vertical">
 
-                <com.google.android.material.card.MaterialCardView
-                    android:layout_width="100dp"
-                    android:layout_height="35dp"
+                <TextView
+                    android:id="@+id/user_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="@font/pd_light"
+                    android:text="User ID"
+                    android:textColor="#2E2E2E"
+                    android:textSize="22sp" />
+
+                <TextView
+                    android:id="@+id/user_information"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:contextClickable="true"
-                    android:foreground="?android:attr/selectableItemBackground">
+                    android:fontFamily="@font/pd_light"
+                    android:text="000cm · 00kg"
+                    android:textColor="#000000"
+                    android:textSize="14sp" />
 
-                    <TextView
-                        android:id="@+id/button_profileModify"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="프로필 수정"
-                        android:textSize="16dp" />
-                </com.google.android.material.card.MaterialCardView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="100dp"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="10dp"
+                        android:contextClickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        app:cardElevation="0dp"
+                        app:strokeColor="#D0D0D0"
+                        app:strokeWidth="0.5dp">
+
+                        <TextView
+                            android:id="@+id/button_profileModify"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/pd_light"
+                            android:text="프로필 수정"
+                            android:textColor="#2E2E2E"
+                            android:textSize="12sp" />
+                    </com.google.android.material.card.MaterialCardView>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#E6DFDF"
-        />
-    <com.google.android.material.tabs.TabLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/tab_bar">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#E6DFDF"
+            />
+        <com.google.android.material.tabs.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/tab_bar">
 
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_feed"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:icon="@drawable/notes"
-            android:clickable="true"
-            android:scrollbarSize="4dp" />
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tab_feed"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:icon="@drawable/notes"
+                android:clickable="true"
+                android:scrollbarSize="4dp" />
 
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_like"
-            android:layout_width="150dp"
-            android:clickable="true"
-            android:layout_height="150dp"
-            android:icon="@drawable/favorite" />
-    </com.google.android.material.tabs.TabLayout>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/mypage_fragment_layout"
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tab_like"
+                android:layout_width="150dp"
+                android:clickable="true"
+                android:layout_height="150dp"
+                android:icon="@drawable/favorite" />
+        </com.google.android.material.tabs.TabLayout>
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/mypage_fragment_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        </androidx.fragment.app.FragmentContainerView>
+            </androidx.fragment.app.FragmentContainerView>
 
-    </FrameLayout>
-</LinearLayout>
+        </FrameLayout>
+    </LinearLayout>
+</RelativeLayout>
