--- a/app/src/main/res/layout/activity_preset.xml
+++ b/app/src/main/res/layout/activity_preset.xml
@@ -69,8 +69,10 @@
                 android:layout_width="300dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center_horizontal"
-                android:backgroundTint="#FFF9F9F9"
-                app:cardCornerRadius="6dp">
+                android:layout_marginTop="5dp"
+                android:backgroundTint="#F9F9F9"
+                app:cardCornerRadius="6dp"
+                app:cardElevation="0dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -78,13 +80,13 @@
                     android:orientation="horizontal">
 
                     <EditText
-                        android:foreground="?android:attr/selectableItemBackground"
                         android:id="@+id/ki_input"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="@null"
                         android:ems="10"
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:hint="입력하기"
                         android:inputType="number"
                         android:paddingLeft="10dp"
@@ -122,8 +124,10 @@
                 android:layout_width="300dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
                 android:backgroundTint="#FFF9F9F9"
-                app:cardCornerRadius="6dp">
+                app:cardCornerRadius="6dp"
+                app:cardElevation="0dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -131,13 +135,13 @@
                     android:orientation="horizontal">
 
                     <EditText
-                        android:foreground="?android:attr/selectableItemBackground"
                         android:id="@+id/muge_input"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="@null"
                         android:ems="10"
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:hint="입력하기"
                         android:inputType="number"
                         android:paddingLeft="10dp"
@@ -175,8 +179,10 @@
                 android:layout_width="300dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
                 android:backgroundTint="#FFF9F9F9"
-                app:cardCornerRadius="6dp">
+                app:cardCornerRadius="6dp"
+                app:cardElevation="0dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -184,13 +190,13 @@
                     android:orientation="horizontal">
 
                     <EditText
-                        android:foreground="?android:attr/selectableItemBackground"
                         android:id="@+id/nai_input"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="@null"
                         android:ems="10"
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:hint="입력하기"
                         android:inputType="number"
                         android:paddingLeft="10dp"
@@ -220,6 +226,7 @@
         android:fontFamily="@font/pd_regu"
         android:text="완료하기"
         android:textSize="16dp"
+        app:cornerRadius="25dp"
         app:iconSize="18dp" />
 
     <TextView
@@ -227,10 +234,10 @@
         android:layout_width="152dp"
         android:layout_height="30dp"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="5dp"
-        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_marginTop="25dp"
         android:clickable="true"
         android:fontFamily="@font/pd_light"
+        android:foreground="?android:attr/selectableItemBackground"
         android:gravity="center_horizontal"
         android:text="다음에 할게요"
         android:textSize="16dp" />
