--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -7,7 +7,6 @@
     android:layout_gravity="center">
 
 
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -22,94 +21,74 @@
     </FrameLayout>
 
     <RelativeLayout
-    android:layout_alignParentBottom="true"
-    android:layout_width="match_parent"
-    android:layout_height="150dp">
-    <ImageView
+        android:id="@+id/bar"
         android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="-15dp"
-        android:src="@drawable/bottom_bar_img_2">
-
-    </ImageView>
-
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="20dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="53.5dp"
-        android:layout_marginBottom="35.5dp"
-        android:src="@drawable/home_btn">
-
-    </ImageView>
-
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="20dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="53dp"
-        android:layout_marginBottom="35.5dp"
-        app:srcCompat="@drawable/img_mypage" />
-
-    <ImageView
-        android:alpha="0.8"
-        android:layout_width="wrap_content"
-        android:layout_height="120dp"
-        android:src="@drawable/hanger_img_background"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="21dp"
-        android:layout_centerHorizontal="true">
-
-    </ImageView>
-
-    <ImageView
-        android:id="@+id/chat_btn"
-        android:layout_width="37dp"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="55dp"
-        android:clickable="true"
-        android:src="@drawable/hanger_img" />
-
-
-        </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_height="88dp"
         android:layout_alignParentBottom="true">
 
-        <LinearLayout
-            android:id="@+id/home_btn"
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/chat"
             android:layout_width="wrap_content"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="false"
+            android:alpha="0.8"
+            android:backgroundTint="#232323"
             android:clickable="true"
-            android:layout_weight="1"
+            android:elevation="2dp"
+            app:backgroundTint="#FFFFFF"
+            app:borderWidth="3dp"
+            app:elevation="2dp"
+            app:fabCustomSize="53dp"
+            app:srcCompat="@drawable/hanger_img"
+            app:tint="@color/white" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="-30dp"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/bar">
+
+        </ImageView>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:gravity="bottom"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/home"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginEnd="50dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:padding="20dp"
+                android:src="@drawable/home">
+
+            </ImageView>
+
+
+            <ImageView
+                android:id="@+id/profile"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:padding="20dp"
+                android:src="@drawable/profile"></ImageView>
+
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:layout_weight="0.35">
 
-        </LinearLayout>
+    </RelativeLayout>
 
-        <LinearLayout
-            android:id="@+id/my_page_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:clickable="true"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-        </LinearLayout>
-
-    </LinearLayout>
 </RelativeLayout>
