--- a/app/src/main/res/layout/fragment_favorite_list.xml
+++ b/app/src/main/res/layout/fragment_favorite_list.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <GridView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/grid_mypage_favorite"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="3" />
+        />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/av"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="false"
+        android:layout_centerInParent="true"
+        android:visibility="visible"
+        app:lottie_fileName="loading.json"
+        app:lottie_loop="true">
+    </com.airbnb.lottie.LottieAnimationView>
 
 </RelativeLayout>
