--- a/app/src/main/res/layout/grid_item_home.xml
+++ b/app/src/main/res/layout/grid_item_home.xml
@@ -3,84 +3,85 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="20dp"
+    android:clickable="true"
+    android:contextClickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
 
             android:id="@+id/card_view"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            app:cardCornerRadius="5dp">
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="0dp">
 
             <ImageView
                 android:id="@+id/grid_imageView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop" />
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true" />
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="5dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal">
 
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/chat_img"
-                android:layout_width="35dp"
-                android:layout_height="30dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="5dp"
                 android:src="@drawable/basic_img" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/grid_text_nickname"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom">
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/pd_regu"
+                android:singleLine="true"
+                android:text="hua.kk"
+                android:textColor="#505050"
+                android:textSize="14sp" />
 
-                <View
-                    android:layout_width="5dp"
-                    android:layout_height="match_parent" />
+            <LinearLayout
+                android:id="@+id/heart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/heart_shape"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:clickable="true"
+                    android:contextClickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:padding="5dp"
+                    android:src="@drawable/favorite_filled"
+                    app:tint="#F44336" />
 
                 <TextView
-                    android:id="@+id/grid_text_nickname"
+                    android:id="@+id/grid_likes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textSize="15dp" />
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="10dp"
+                    android:fontFamily="@font/pd_regu"
+                    android:text="112"
+                    android:textColor="#A7A7A7">
 
-                <LinearLayout
-                    android:id="@+id/heart"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1.3">
-
-                    <ImageView
-                        android:id="@+id/heart_shape"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:clickable="true"
-                        android:contextClickable="true"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        android:src="@drawable/heart_line" />
-
-                    <TextView
-                        android:id="@+id/grid_likes"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="112">
-
-                    </TextView>
-                </LinearLayout>
+                </TextView>
             </LinearLayout>
 
         </LinearLayout>
@@ -88,8 +89,16 @@
         <TextView
             android:id="@+id/grid_text_tagging"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center_horizontal" />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/pd_light"
+            android:maxLines="1"
+            android:paddingEnd="5dp"
+            android:bufferType="spannable"
+            android:singleLine="true"
+            android:gravity="center_vertical"
+            android:text="시티보이 시티보이 시티보이시티보이 시티보이 시티보이시티보이 시시티보이 시티보이 시티보이시티보이 시티보이 시티보이시티보이 시티보이 시티보이시티보이 시티보이 시티보이시티보이 시티보이 시티보이티시티보이티보이시티보이티보이시티보이티보이보이 시티보이"
+            android:textColor="#505050" />
     </LinearLayout>
 
 </RelativeLayout>
