--- a/app/src/main/res/layout/grid_item_mypage.xml
+++ b/app/src/main/res/layout/grid_item_mypage.xml
@@ -4,11 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
     <ImageView
         android:id="@+id/grid_imageView_mypage"
-        android:layout_width="135dp"
-        android:layout_height="165dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true">
 
     </ImageView>
 
